tests/bad_positioned_by_useop/bad_positioned_by_useop.exp
Error ------------------------------------------------------------------------------------------------------- b.js:17:12

Property `x` is missing in object literal [1] but exists in `Data` [2].

   b.js:17:12
   17|   o['fun'](data);
                  ^^^^

References:
   b.js:16:17
   16|   if (b) data = { z: 0 };
                       ^^^^^^^^ [1]
   b.js:5:28
    5| declare function foo(data: Data): void;
                                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- b.js:17:12

Property `z` is missing in `Data` [1] but exists in object literal [2] in the first argument.

   b.js:17:12
   17|   o['fun'](data);
                  ^^^^

References:
   b.js:5:28
    5| declare function foo(data: Data): void;
                                  ^^^^ [1]
   b.js:16:17
   16|   if (b) data = { z: 0 };
                       ^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- b.js:22:12

Property `x` is missing in object literal [1] but exists in `Data` [2].

   b.js:22:12
   22|   o['fun'](data);
                  ^^^^

References:
   b.js:21:14
   21|   var data = { z: 0 };
                    ^^^^^^^^ [1]
   b.js:5:28
    5| declare function foo(data: Data): void;
                                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- b.js:22:12

Property `z` is missing in `Data` [1] but exists in object literal [2] in the first argument.

   b.js:22:12
   22|   o['fun'](data);
                  ^^^^

References:
   b.js:5:28
    5| declare function foo(data: Data): void;
                                  ^^^^ [1]
   b.js:21:14
   21|   var data = { z: 0 };
                    ^^^^^^^^ [2]



Found 4 errors
